Shopcart - Adição da camada consumer da api de produtos e validação no método de criação

--- a/shop-chart/src/main/resources/application.properties
+++ b/shop-chart/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port:8083
 spring.data.mongodb.database.port:8090
-product.api=http://localhost:8080/product-api
+#product.api=http://localhost:8080/product-api
+product.api=https://product-api.cfapps.io/product-api
